--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc ; vite build",
     "build-no-errors": "tsc ; vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:dev": "vite build --mode development"
+
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
